Update static data configuration and enhance system inventory scanner script
- Modified `static_data.conf` to change workspace and environment settings for better alignment with team structure.
- Updated `system_inventory_scanner.sh` to improve date formatting for discovery and system age, ensuring consistency in output.
- Enhanced server function detection logic to classify products based on serial numbers, specifically identifying VMware Vcenter VMs.
- Improved output formatting in the description section to use HTML tags for better readability in generated reports.

--- a/static_data.conf
+++ b/static_data.conf
@@ -3,8 +3,9 @@
 Impact=High
 Asset_Type=Server
 End_of_Life=
+Physical_Subtype=
 Usage_Type=permanent
 Created_by_-_Source=System Inventory Scanner
 Department=IT
-Workspace=My Workspace
-Environment=Production
+Workspace=My Team
+Environment=PROD
