Add local system scanning and improve script flexibility
- Introduced `-l` flag for local system inventory collection without SSH
- Refactored `collect_system_info()` to support both local and remote execution
- Simplified static data handling by removing external configuration files
- Updated script usage and help text to include local scanning option
- Improved file handling for local and remote system inventory generation

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # System inventory output files
 system_inventory.csv
 software_inventory.csv
+static_data.conf
+system_inventory.conf
+linux.csv
 
 # Temporary files
 *.tmp
